fix: Update service save list engredient